Regression: some operations displayed in the Info Editor log have a syntax error #119091

Closed
opened 2024-03-05 16:52:55 +01:00 by Germano Cavalcante · 1 comment

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01

Blender Version
Broken: version: 4.1, commit date: 29-jan-2024, caused by 61fb2b17c8

Short description of error
Issue identified when investigating #119064
Some operations displayed in the Info Editor log have a syntax error.
It was observed in properties in the Geometry Nodes modifier panels.

image

Exact steps for others to reproduce the error

  • Open attached .blend file
  • Edit the "Edge Crease" property in the "GeometryNodes" modifier panel.
  • Check the operation displayed in the Info Editor.

It should be:

bpy.context.object.modifiers["GeometryNodes"]["Socket_2"] = 1.0

Not it is missing ".object" there is a dot "." misplaced.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01 **Blender Version** Broken: version: 4.1, commit date: 29-jan-2024, caused by 61fb2b17c8b2ebf488afcb16b1c5ca354cb5a827 **Short description of error** Issue identified when investigating #119064 Some operations displayed in the Info Editor log have a syntax error. It was observed in properties in the Geometry Nodes modifier panels. ![image](/attachments/487706bf-decb-444f-8864-915802d7b15b) **Exact steps for others to reproduce the error** - Open attached .blend file - Edit the "Edge Crease" property in the "GeometryNodes" modifier panel. - Check the operation displayed in the Info Editor. It should be: ```python bpy.context.object.modifiers["GeometryNodes"]["Socket_2"] = 1.0 ``` Not it is missing ".object" there is a dot "." misplaced.
Author
Member
Caused by 61fb2b17c8 @HooglyBoogly ^
Hans Goudey self-assigned this 2024-03-05 16:55:27 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-05 17:59:04 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-05 18:03:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119091
No description provided.