Fix #119091: Incorrect path for WM context RNA property

Mistake in 61fb2b17c8b2ebf488afcb16b1c5ca354cb5a827